--- a/frontend/src/components/topbar/topbar.css
+++ b/frontend/src/components/topbar/topbar.css
@@ -5,7 +5,8 @@
   position: sticky;
   top: 0;
   z-index: 999;
-  
+  /* border-bottom: 10px; */
+
 }
 
 .topbarWrapper {
@@ -14,6 +15,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 10px;
+
 }
 
 .logo {
