--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -7,3 +7,54 @@
     display: flex;
     margin: 20px;
 }
+.font {
+    margin-bottom: 20px;
+    text-decoration: underline ;
+    text-transform: capitalize ;
+    font-style:oblique;
+    font-weight: bolder;
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.type {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .typeItem {
+    flex: 1;
+    /* margin: 0px 20px;
+    padding: 100px; */
+    border-radius: 10px;
+    /* font-size: 20px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  }
+  .typeItem:hover{
+      background-color: whitesmoke;
+      box-shadow: whitesmoke;
+        
+  }
+
+
+  .resume{
+    content: "asdsad";
+  }
+
+  .portfolio{
+
+  }
+  
+  .typeTitle{
+     
+
+  }
+  .typeTitle:hover{
+    content: "abhcas";
+
+  }
