--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,3 +8,14 @@
     text-decoration: none;
     color: inherit;
 }
+
+.backgroundImage{
+    background-image: url('.\\images\\d.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    /* width: 100vw;
+    height: 100vh; */
+    
+}
