--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -23,9 +23,9 @@
     <nav id="header" class="fixed border-b-1 shadow-lg w-full z-30 top-0 text-white ">
       <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
         <div class="pl-4 flex items-center">
-          <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
-            <img class="w-50 h-20 hover:scale-150 duration-200 "  src="images\logo2.png" >
-          </a>
+            <a class="text-red-600 no-underline hover:no-underline font-bold text-3xl  lg:text-4xl" href="#">
+              PRTFOLIOS
+            </a>
         </div>
         <div class="block lg:hidden pr-4">
           <button id="nav-toggle" class="flex items-center p-1 text-pink-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
@@ -56,23 +56,22 @@
         <!--Left Col-->
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
           <!-- <p class="uppercase tracking-loose w-full">Want t</p> -->
-          <h1 class="my-4 text-5xl font-bold leading-tight mb-5">
-            Create beautiful resumes and portfolios
+          <h1 class="my-4 text-5xl font-serif leading-tight mb-5">
+            Making and Sharing resume and portfolio was never this easy
           </h1>
           
-          <p class="leading-normal text-xl mt-7">
+          <!-- <p class="leading-normal text-xl mt-7">
             Want to get your dream job?
-          </p>
+          </p> -->
           <a class=" hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg transform hover:scale-125 ease-in-out duration-500 mb-8" href="signup.html" >
             Get Started</a>
             <p class="leading-normal text-2xl mt-9 mb-8">
-              Get your resume and portfolio is easy.
+              Create and share beautiful resumes and portfolios right away.
             </p>
           <!-- <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
           </button> -->
         </div>
         <!--Right Col-->
-       
       </div>
     </div>
     <!-- curve image -->
@@ -107,13 +106,13 @@
         <div class="flex flex-wrap p-14 border-b-8">
           <div class="w-5/6 sm:w-1/2 p-6">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-              Lorem ipsum dolor sit amet
+              THE BOLD FUTURE,<br/> BLACK CHERISH
             </h3>
-            <p class="text-gray-600 mb-8">
+            <!-- <p class="text-gray-600 mb-8">
               Lorem ipsum dolor sit amet.
               <br />
               <br />
-            </p>
+            </p> -->
           </div>
           <div class="w-full sm:w-1/2 p-6">
             <img src="images\temp1.png" class="w-full sm:h-64 mx-auto rounded-3xl hover:shadow-2xl transform hover:scale-125 ease-in-out duration-500">
@@ -128,14 +127,14 @@
           <div class="w-full sm:w-1/2 p-6 mt-6">
             <div class="align-middle">
               <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                Lorem ipsum dolor sit amet
+                SIMPLE AND ELEGANT,<br/> SNOW WHITE
               </h3>
-              <p class="text-gray-600 mb-8">
+              <!-- <p class="text-gray-600 mb-8">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
                 <br />
                 <br />
                
-              </p>
+              </p> -->
             </div>
           </div>
         </div>
@@ -147,7 +146,7 @@
               mix 
             </h3>
             <p class="text-gray-600 mb-8">
-              asfcaservawerfsdfeby5.
+              mix.
               <br />
               <br />
             </p>
@@ -171,13 +170,13 @@
         <div class="flex flex-wrap p-14 border-b-8">
           <div class="w-5/6 sm:w-1/2 p-6">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-              Lorem ipsum dolor sit amet
+              THE BOLD FUTURE,<br/> BLACK CHERISH
             </h3>
-            <p class="text-gray-600 mb-8">
+            <!-- <p class="text-gray-600 mb-8">
               Lorem ipsum dolor sit amet.
               <br />
               <br />
-            </p>
+            </p> -->
           </div>
           <div class="w-full sm:w-1/2 p-6">
             <img src="images\temp1.png" class="w-full sm:h-64 mx-auto rounded-3xl hover:shadow-2xl transform hover:scale-125 ease-in-out duration-500">
@@ -192,14 +191,14 @@
           <div class="w-full sm:w-1/2 p-6 mt-6">
             <div class="align-middle">
               <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                Lorem ipsum dolor sit amet
+                SIMPLE AND ELEGANT,<br/> SNOW WHITE
               </h3>
-              <p class="text-gray-600 mb-8">
+              <!-- <p class="text-gray-600 mb-8">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
                 <br />
                 <br />
                
-              </p>
+              </p> -->
             </div>
           </div>
         </div>
@@ -236,7 +235,7 @@
 
         <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink transform hover:scale-125 ease-in-out duration-500">
           <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
-            <div> href="#" class="flex flex-wrap no-underline hover:no-underline">
+            <div>
               
               <div class="w-full font-bold text-xl text-gray-800 px-6">
                 Easily create your resume and portfolio website.
@@ -259,7 +258,7 @@
 
         <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink transform hover:scale-125 ease-in-out duration-500">
           <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
-            <div> href="#" class="flex flex-wrap no-underline hover:no-underline">
+            <div>
               
               <div class="w-full font-bold text-xl text-gray-800 px-6">
                 Choose from multiple Templates.
@@ -274,7 +273,7 @@
 
         <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink transform hover:scale-125 ease-in-out duration-500">
           <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
-            <div> href="#" class="flex flex-wrap no-underline hover:no-underline">
+            <div>
               
               <div class="w-full font-bold text-xl text-gray-800 px-6">
                 Then leave the rest to us
@@ -312,18 +311,18 @@
       </g>
     </svg>
     <section class="container mx-auto text-center py-6 mb-12">
-      <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">
+      <h1 class="w-full my-2 text-4xl font-bold leading-tight text-center text-white">
         You can contact us here
       </h1>
       <div class="w-full mb-4">
         <div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
       </div>
-      <h5 class="my-4 text-3xl leading-tight">
+      <h6 class="my-4 text-2xl leading-tight underline  ">
         prtfolios.sprt@gmail.com
-      </h5>
-      <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+      </h6>
+      <!-- <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
         Action!
-      </button>
+      </button> -->
     </section>
     <!--Footer-->
     <footer class="bg-white">
@@ -334,15 +333,13 @@
               PRTFOLIOS
             </a>
           </div>
-          <div class="flex-1">
+          <!-- <div class="flex-1">
             <p class="uppercase text-gray-500 md:mb-6">Follow us on Github</p>
             
-          </div>
+          </div> -->
          
-      
         </div>
       </div>
-      <a href="https://www.freepik.com/free-photos-vectors/background" class="text-gray-500">Background vector created by freepik - www.freepik.com</a>
     </footer>
     <!-- jQuery if you need it
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
