--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -7,14 +7,17 @@
     display: flex;
     margin: 20px;
 }
-.font {
+.text {
     margin-bottom: 20px;
+    color: white;
     text-decoration: underline ;
-    text-transform: capitalize ;
     font-style:oblique;
-    font-weight: bolder;
     text-align: center;
+    font-weight: bolder;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.rad{
+  border-radius: 25px;
 }
 
 .type {
@@ -27,7 +30,7 @@
     flex: 1;
     /* margin: 0px 20px;
     padding: 100px; */
-    border-radius: 10px;
+    border-radius: 25px;
     /* font-size: 20px; */
     display: flex;
     justify-content: center;
@@ -40,21 +43,87 @@
       box-shadow: whitesmoke;
         
   }
-
-
-  .resume{
-    content: "asdsad";
+  .transboxRes {
+    margin: 30px;
+    background-color: #ffffff;
+    border: 2px solid black;
+    border-radius: 6px;
+    opacity: 0;
+  }
+  .transboxPort {
+    margin: 30px;
+    background-color: #ffffff;
+    border: 2px solid black;
+    border-radius: 6px;
+    opacity: 0;
   }
 
-  .portfolio{
+.res{
+  opacity: 1;
+  background-image: url("..\\..\\images\\resume.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
-  }
+.res:hover .transboxRes{
+  transition: .5s ease;
+  opacity: 1;
   
-  .typeTitle{
-     
+}
 
-  }
+.port{
+  opacity: 1;
+  background-image: url("..\\..\\images\\temp2.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.port:hover .transboxPort{
+  transition: .5s ease;
+  opacity: 1;
+  
+}
+  
   .typeTitle:hover{
     content: "abhcas";
 
+  }
+
+
+  /* ---------------------- image */
+  
+  .container {
+  }
+  .image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+  }
+  
+  .middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  .container:hover .image {
+    opacity: 0.3;
+  }
+  
+  .container:hover .middle {
+    opacity: 1;
+  }
+  
+  .textnew {
+    background-color: #04AA6D;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
   }
