apis and integrated mihir work

--- a/base/templates/dashboard_base.html
+++ b/base/templates/dashboard_base.html
@@ -4,6 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="https://unpkg.com/tailwindcss@%5E2/dist/tailwind.min.css" rel="stylesheet">
    <title>{% block title %}Base Template{% endblock %}</title>
    {% render_bundle_css  %}
    {% block extend_css %}
