--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -1,8 +1,4 @@
 
-.home{
-  flex: 4;
-}
-
 .homeWidgets{
   display: flex;
   margin: 20px;
@@ -11,7 +7,6 @@
   margin-bottom: 20px;
   color: white;
   text-decoration: underline ;
-  font-style:oblique;
   text-align: center;
   font-weight: bolder;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -20,31 +15,20 @@
 border-radius: 25px;
 }
 
-.type {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
 .typeItem {
   flex: 1;
   /* margin: 0px 20px;
   padding: 100px; */
-  border-radius: 25px;
+  /* border-radius: 25px; */
   /* font-size: 20px; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-}
-.typeItem:hover{
-    background-color: whitesmoke;
-    box-shadow: whitesmoke;
-      
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75); */
+  /* box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75); */
 }
 .transboxRes {
-  margin: 30px;
+  margin: 150px;
   background-color: #ffffff;
   border: 2px solid black;
   border-radius: 6px;
@@ -59,12 +43,11 @@ border-radius: 25px;
 }
 
 .res{
-opacity: 1;
-/* background-image: url("..\\..\\images\\resume.jpg"); */
-background-repeat: no-repeat;
-background-size: cover;
 }
-
+.res:hover .a{
+  transition: .5s ease;
+  opacity: 0.1;
+  }
 .res:hover .transboxRes{
 transition: .5s ease;
 opacity: 1;
@@ -72,11 +55,11 @@ opacity: 1;
 }
 
 .port{
-opacity: 1;
-/* background-image: url("..\\..\\images\\temp2.png"); */
-background-repeat: no-repeat;
-background-size: cover;
 }
+.port:hover .c{
+  transition: .5s ease;
+  opacity: 0.1;
+  }
 .port:hover .transboxPort{
 transition: .5s ease;
 opacity: 1;
