--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,6 +17,11 @@
       .gradient {
         background: linear-gradient(90deg, #4798f5 0%, #3c6ff0 100%);
       }
+      img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    }
     </style>
   </head>
   <body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
@@ -23,56 +29,38 @@
     <nav id="header" class="fixed border-b-1 shadow-lg w-full z-30 top-0 text-white ">
       <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
         <div class="pl-4 flex items-center">
-          <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
-            <img class="w-50 h-20 hover:scale-150 duration-200 "  src="images\logo2.png" >
-          </a>
-        </div>
-        <div class="block lg:hidden pr-4">
-          <button id="nav-toggle" class="flex items-center p-1 text-pink-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-            <svg class="fill-current h-6 w-6" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-              <title>Menu</title>
-              <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
-            </svg>
-          </button>
+            <a class="text-red-600 no-underline hover:no-underline font-bold text-3xl  lg:text-4xl" href="/index">
+              PRTFOLIOS
+            </a>
         </div>
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
           <ul class="list-reset lg:flex justify-end flex-1 items-center">
             <li class="mr-3">
-              <a id="navAction" class="inline-block mx-auto lg:mx-0 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 bg-white text-gray-800  hover:shadow-2xl hover:bg-white transform hover:scale-110 ease-in-out duration-500" href={%url 'login'%}>Log in</a>
-              <!-- <button id="navAction" class="inline-block py-2 px-4 text-black font-bold border-b rounded-lg hover:shadow-2xl hover:bg-white transform hover:scale-125 ease-in-out duration-500" href="login.html">Log in</button> -->
+              <a id="navAction" class="inline-block mx-auto lg:mx-0 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 bg-white text-gray-800  hover:shadow-2xl hover:bg-white transform hover:scale-110 ease-in-out duration-500" href="/login">Log in</a>
             </li>
             <li class="mr-3">
-              <a id="navAction" class="inline-block mx-auto lg:mx-0 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 bg-white text-gray-800  hover:shadow-2xl hover:bg-white transform hover:scale-110 ease-in-out duration-500" href={%url 'signup'%}>Sign up</a>
-              <!-- <button id="navAction" class="inline-block py-2 px-4 text-black font-bold border-b rounded-lg hover:shadow-2xl hover:bg-white transform hover:scale-125 ease-in-out duration-500" href="signup.html">Sign up</button> -->
+              <a id="navAction" class="inline-block mx-auto lg:mx-0 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 bg-white text-gray-800  hover:shadow-2xl hover:bg-white transform hover:scale-110 ease-in-out duration-500" href="/signup">Sign up</a>
             </li>
           </ul>
         </div>
       </div>
       <hr class="border-b border-gray-100 opacity-25 my-0 py-0" />
     </nav>
-    <!--Hero-->
+
     <div class="pt-24">
       <div class="container pt-24 px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
         <!--Left Col-->
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
-          <!-- <p class="uppercase tracking-loose w-full">Want t</p> -->
-          <h1 class="my-4 text-5xl font-bold leading-tight mb-5">
-            Create beautiful resumes and portfolios
+          <h1 class="my-4 text-5xl font-serif leading-tight mb-5">
+            Making and Sharing resume and portfolio was never this easy
           </h1>
-          
-          <p class="leading-normal text-xl mt-7">
-            Want to get your dream job?
-          </p>
-          <a class=" hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg transform hover:scale-125 ease-in-out duration-500 mb-8" href="signup.html" >
+          <a class=" hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg transform hover:scale-125 ease-in-out duration-500 mb-8" href="/signup" >
             Get Started</a>
             <p class="leading-normal text-2xl mt-9 mb-8">
-              Get your resume and portfolio is easy.
+              Create and share beautiful resumes and portfolios right away.
             </p>
-          <!-- <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-          </button> -->
         </div>
         <!--Right Col-->
-       
       </div>
     </div>
     <!-- curve image -->
@@ -107,53 +95,35 @@
         <div class="flex flex-wrap p-14 border-b-8">
           <div class="w-5/6 sm:w-1/2 p-6">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-              Lorem ipsum dolor sit amet
+              THE BOLD FUTURE,<br/> BLACK CHERISH
             </h3>
-            <p class="text-gray-600 mb-8">
-              Lorem ipsum dolor sit amet.
-              <br />
-              <br />
-            </p>
           </div>
           <div class="w-full sm:w-1/2 p-6">
-            <img src="images\temp1.png" class="w-full sm:h-64 mx-auto rounded-3xl hover:shadow-2xl transform hover:scale-125 ease-in-out duration-500">
+            <img src="{% static 'images\temp1.png' %}" class="w-full  mx-auto rounded-3xl hover:shadow-2xl transform hover:scale-150 ease-in-out duration-500">
           </div>
         </div>
 
-
         <div class="flex flex-wrap flex-col-reverse sm:flex-row pb-14 border-b-8">
           <div class="w-full sm:w-1/2 p-6 mt-6">
-            <img src="images\temp2.png" class="w-full sm:h-64 mx-auto border rounded-3xl hover:shadow-2xl transform hover:scale-125 ease-in-out duration-500">
+            <img src="{% static 'images\temp2.png' %}" class="w-full sm:h-64 mx-auto border rounded-3xl hover:shadow-2xl transform hover:scale-150 ease-in-out duration-500">
           </div>
           <div class="w-full sm:w-1/2 p-6 mt-6">
             <div class="align-middle">
               <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                Lorem ipsum dolor sit amet
+                SIMPLE AND ELEGANT,<br/> SNOW WHITE
               </h3>
-              <p class="text-gray-600 mb-8">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
-                <br />
-                <br />
-               
-              </p>
             </div>
           </div>
         </div>
 
-
         <div class="flex flex-wrap pb-14 border-b-8">
           <div class="w-5/6 sm:w-1/2 p-6">
-            <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-              mix 
+            <h3 class="content-center text-3xl text-gray-800 font-bold leading-none mb-3">
+              YOUR TRUSTED PARTNER IN ANIMATION 
             </h3>
-            <p class="text-gray-600 mb-8">
-              asfcaservawerfsdfeby5.
-              <br />
-              <br />
-            </p>
           </div>
           <div class="w-full sm:w-1/2 p-6">
-            <img src="images\temp3.png" class="w-full sm:h-64 mx-auto rounded-3xl hover:shadow-2xl transform hover:scale-125 ease-in-out duration-500">
+            <img src="{% static 'images\temp3.png' %}" class="w-full sm:h-64 mx-auto rounded-3xl hover:shadow-2xl transform hover:scale-150 ease-in-out duration-500">
           </div>
       </div>
 
@@ -168,61 +138,46 @@
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
         </div>
 
-        <div class="flex flex-wrap p-14 border-b-8">
+        <div class="flex flex-wrap p-14 border-b-8 ">
           <div class="w-5/6 sm:w-1/2 p-6">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-              Lorem ipsum dolor sit amet
+              THE MINIMALIST
             </h3>
-            <p class="text-gray-600 mb-8">
-              Lorem ipsum dolor sit amet.
-              <br />
-              <br />
-            </p>
           </div>
-          <div class="w-full sm:w-1/2 p-6">
-            <img src="images\temp1.png" class="w-full sm:h-64 mx-auto rounded-3xl hover:shadow-2xl transform hover:scale-125 ease-in-out duration-500">
+          <div class=" p-6">
+            <img src="{% static 'images\Rtemp1.png' %}" class=" sm:h-96 mx-auto  hover:shadow-2xl transform hover:scale-150 ease-in-out duration-500">
           </div>
         </div>
 
-
-        <div class="flex flex-wrap flex-col-reverse sm:flex-row pb-14 border-b-8">
-          <div class="w-full sm:w-1/2 p-6 mt-6">
-            <img src="images\temp2.png" class="w-full sm:h-64 mx-auto border rounded-3xl hover:shadow-2xl transform hover:scale-125 ease-in-out duration-500">
+        <div class="flex flex-wrap flex-col-reverse sm:flex-row pb-14 border-b-8  justify-center  ">
+          <div class="p-6 mt-6">
+            <img src="{% static 'images\Rtemp2.png' %}" class="  sm:h-96 mx-auto border  hover:shadow-2xl transform hover:scale-150 ease-in-out duration-500">
           </div>
-          <div class="w-full sm:w-1/2 p-6 mt-6">
+          <div class="pl-20 w-full sm:w-1/2 p-6 mt-6">
             <div class="align-middle">
               <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-                Lorem ipsum dolor sit amet
+                SIMPLE AND ELEGANT,<br/> SNOW WHITE
               </h3>
-              <p class="text-gray-600 mb-8">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
-                <br />
-                <br />
-               
-              </p>
             </div>
           </div>
         </div>
 
-
-        <div class="flex flex-wrap pb-14 border-b-8">
+        <div class="flex flex-wrap py-14 border-b-8 ">
           <div class="w-5/6 sm:w-1/2 p-6">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-              mix 
+              THE BLUE SPHERE 
             </h3>
-            <p class="text-gray-600 mb-8">
+            <!-- <p class="text-gray-600 mb-8">
               asfcaservawerfsdfeby5.
               <br />
               <br />
-            </p>
+            </p> -->
           </div>
-          <div class="w-full sm:w-1/2 p-6">
-            <img src="images\temp3.png" class="w-full sm:h-64 mx-auto rounded-3xl hover:shadow-2xl transform hover:scale-125 ease-in-out duration-500">
+          <div class=" p-6">
+            <img src="{% static 'images\Rtemp3.png' %}" class=" sm:h-96 mx-auto hover:shadow-2xl transform hover:scale-150 ease-in-out duration-500">
           </div>
       </div>
-
     </section>
-
 
     <section class="bg-white border-b py-8">
       <div class="container mx-auto flex flex-wrap pt-4 pb-12">
@@ -236,8 +191,7 @@
 
         <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink transform hover:scale-125 ease-in-out duration-500">
           <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
-            <div> href="#" class="flex flex-wrap no-underline hover:no-underline">
-              
+            <div>
               <div class="w-full font-bold text-xl text-gray-800 px-6">
                 Easily create your resume and portfolio website.
               </div>
@@ -248,45 +202,40 @@
           </div>
           <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
             <div class="flex items-center justify-start">
-              <a href="signup.html" class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+              <a href="/signup" class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                 Sign up</a>
-              <a href="login.html" class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+              <a href="/login" class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
                 Log in</a>
             </div>
           </div>
         </div>
 
-
         <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink transform hover:scale-125 ease-in-out duration-500">
           <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
-            <div> href="#" class="flex flex-wrap no-underline hover:no-underline">
+            <div>
               
               <div class="w-full font-bold text-xl text-gray-800 px-6">
                 Choose from multiple Templates.
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
-                Either fill in your details or upload your old resume and choose a template.
+                Either fill in your details or upload your old resume for autofill and choose a template.
               </p>
             </div>
           </div>
         </div>
 
-
         <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink transform hover:scale-125 ease-in-out duration-500">
           <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
-            <div> href="#" class="flex flex-wrap no-underline hover:no-underline">
-              
+            <div>
               <div class="w-full font-bold text-xl text-gray-800 px-6">
                 Then leave the rest to us
               </div>
               <p class="text-gray-800 text-base px-6 mb-5">
                 You will get a sharable link for your portfolio which you can share it with anyone.
-
               </p>
             </div>
           </div>
         </div>
-
       </div>
     </section>
    
@@ -312,41 +261,30 @@
       </g>
     </svg>
     <section class="container mx-auto text-center py-6 mb-12">
-      <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">
+      <h1 class="w-full my-2 text-4xl font-bold leading-tight text-center text-white">
         You can contact us here
       </h1>
       <div class="w-full mb-4">
         <div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
       </div>
-      <h5 class="my-4 text-3xl leading-tight">
-        prtfolios.sprt@gmail.com
-      </h5>
-      <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-        Action!
-      </button>
+      <h6 class="my-4 text-2xl leading-tight underline  ">
+        <a  href="mailto:prtfolios.sprt@gmail.com">prtfolios.sprt@gmail.com</a>
+
+      </h6>
     </section>
     <!--Footer-->
     <footer class="bg-white">
       <div class="container mx-auto px-8">
         <div class="w-full flex flex-col md:flex-row py-6">
           <div class="flex-1 mb-6 text-black">
-            <a class="text-pink-600 no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
+            <a class="text-pink-600 no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="/">
               PRTFOLIOS
             </a>
           </div>
-          <div class="flex-1">
-            <p class="uppercase text-gray-500 md:mb-6">Follow us on Github</p>
-            
-          </div>
-         
-      
         </div>
       </div>
-      <a href="https://www.freepik.com/free-photos-vectors/background" class="text-gray-500">Background vector created by freepik - www.freepik.com</a>
     </footer>
-    <!-- jQuery if you need it
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  -->
+
     <script>
       var scrollpos = window.scrollY;
       var header = document.getElementById("header");
@@ -392,8 +330,6 @@
       });
     </script>
     <script>
-      /*Toggle dropdown list*/
-      /*https://gist.github.com/slavapas/593e8e50cf4cc16ac972afcbad4f70c8*/
 
       var navMenuDiv = document.getElementById("nav-content");
       var navMenu = document.getElementById("nav-toggle");
@@ -402,18 +338,14 @@
       function check(e) {
         var target = (e && e.target) || (event && event.srcElement);
 
-        //Nav Menu
         if (!checkParent(target, navMenuDiv)) {
-          // click NOT on the menu
           if (checkParent(target, navMenu)) {
-            // click on the link
             if (navMenuDiv.classList.contains("hidden")) {
               navMenuDiv.classList.remove("hidden");
             } else {
               navMenuDiv.classList.add("hidden");
             }
           } else {
-            // click both outside link and outside menu, hide menu
             navMenuDiv.classList.add("hidden");
           }
         }
