--- a/base/templates/login.html
+++ b/base/templates/login.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tailwind CSS Sign up Form with Image on Left Side Example</title>
+  <title>Login for PRTFOLIOS</title>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
 <body class="bg-gray-100">
 
   <div class="flex h-full max-w-4xl mx-auto justify-center  mb-16">
-    <a class="" href="">
-      <img class="w-55 h-40 " src="logo.png">
-      <!-- <h1 class="mt-7">PRTFOLIOS</h1> -->
+    <a href="/index">
+      <img class="w-55 h-40 " src="{% static 'images\logo.png' %}">
     </a>
   </div>
   <div class="flex items-center bg-gray-100  ">
-    <div class="flex-1 h-full max-w-4xl mx-auto bg-white shadow-md hover:shadow-2xl rounded-lg">
+    <div class="flex-1 h-full max-w-4xl mx-auto ">
       <div class="flex justify-center md:flex-row">
 
-        <div class="flex items-center justify-center p-6 sm:p-12 md:w-1/2">
-          <form class="w-full" method="POST">
+        <div class="flex items-center justify-center p-6 sm:p-12 md:w-1/2 border-2 bg-white shadow-md hover:shadow-2xl rounded-lg">
+          <form class=" " method="POST">
             {% csrf_token %}
             <div class="flex justify-center">
 
@@ -30,14 +30,6 @@
             <h1 class="mb-12 text-2xl font-bold text-center text-black-400 pb-4 border-b-2">
               Log in with your account.
             </h1>
-            <!-- <div>
-                <label class="block text-sm font-semibold">
-                  What should we call you?
-                </label>
-                <input type="text"
-                  class="w-full px-4 py-2 text-sm border rounded-md focus:border-blue-400 focus:outline-none focus:ring-1 focus:ring-blue-600"
-                  placeholder="Enter a username." />
-              </div> -->
             <div class="mt-4 font-semibold">
               <label class="block text-sm">
                 Email address
@@ -63,7 +55,7 @@
             </button>
 
             <div class="mt-4 text-center">
-              <p class="text-sm">Don't have an account?<a href={% url 'signup' %} class="text-blue-600 hover:underline">
+              <p class="text-sm">Don't have an account?<a href="/signup" class="text-blue-600 hover:underline">
                   Sign Up.</a></p>
             </div>
           </form>
