password reset and change

--- a/base/templates/login.html
+++ b/base/templates/login.html
@@ -57,6 +57,8 @@
             <div class="mt-4 text-center">
               <p class="text-sm">Don't have an account?<a href="/signup" class="text-blue-600 hover:underline">
                   Sign Up.</a></p>
+              <p class="text-sm">Forgot you password?<a href="/reset-password" class="text-blue-600 hover:underline">
+                  Reset.</a></p>
             </div>
           </form>
         </div>
