--- a/base/templates/reset-password-complete.html
+++ b/base/templates/reset-password-complete.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="author" content="Prtfolios">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>Login to {{client_display_name}}</title>
+	<title>Login to Prtfolios</title>
 	{# <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> #}
     <link rel="stylesheet" type="text/css" href={% static "css/theme.css" %}>
 	<link rel="stylesheet" type="text/css" href={% static "css/login.css" %}>
